# aether

./: .gitignore  CONTRIBUTION.md  Cargo.toml  LICENSE  README.md  aether.conf.toml  archietecture.md  justfile
addons/erp/: README.md  config.toml
addons/erp/inventory/: README.md  config.toml  pyproject.toml
aeter/: Cargo.toml
aeter_cli/: Cargo.toml
aether/: Cargo.toml
aether/src/: main.rs
aether/src/cli/: initialization.rs  mod.rs  seed.rs
aether/src/server/: serve.rs
aether_cli/: Cargo.toml
aether_web/: package.json  pnpm-lock.yaml  svelte.config.js
aether_web/src/lib/components/layout/default/: defaultLayout.svelte  defaultNavbar.svelte
aether_web/src/lib/components/layout/desk/: deskLayout.svelte  deskSideBar.svelte
aether_web/src/lib/components/pages/layout/default/system/: defaultLayout.svelte  defaultNavbar.svelte  organiationSwitcher.svelte  (+1 more)
aether_web/src/lib/components/ui/breadcrumb/: index.ts  types.ts
aether_web/src/lib/types/: layout.ts  organization.ts
aether_web/src/routes/: +layout.svelte
aether_web/src/routes/(app)/: +layout.svelte
aether_web/src/routes/(app)/(org)/: +layout.svelte
aether_web/src/routes/(app)/(org)/[...slug]/: +page.svelte
aether_web/src/routes/(app)/(system)/apps/: +layout.svelte
aether_web/src/routes/(app)/(system)/organizations/: +layout.svelte
aether_web/src/routes/(app)/(system)/settings/: +layout.svelte
bridges/: README.md
bridges/auth_and_identity/auth0/: Cargo.toml
bridges/auth_and_identity/authentik/: Cargo.toml
bridges/auth_and_identity/google_auth/: Cargo.toml
bridges/auth_and_identity/keycloak/: Cargo.toml
bridges/auth_and_identity/ldap/: Cargo.toml
bridges/auth_and_identity/microsoft_extra/: Cargo.toml
bridges/communications/africas_talking/: Cargo.toml
bridges/communications/bravo/: Cargo.toml
bridges/communications/mailgun/: Cargo.toml
bridges/communications/postmark/: Cargo.toml
bridges/communications/resend/: Cargo.toml
bridges/communications/termii/: Cargo.toml
bridges/communications/twilio/: Cargo.toml
bridges/communications/whatsapp/: Cargo.toml
bridges/document_management/docusign/: Cargo.toml
bridges/document_management/google_drive/: Cargo.toml
bridges/document_management/mayan_edms/: Cargo.toml
bridges/document_management/nextcloud/: Cargo.toml
bridges/documents/local_storage/: Cargo.toml
bridges/maps_and_locations/google_map/: Cargo.toml
bridges/maps_and_locations/open_street_map/: Cargo.toml
bridges/payments/flutterwave/: Cargo.toml
bridges/payments/paystack/: Cargo.toml
bridges/payments/stripe/: Cargo.toml
bridges/payrolls/payroll_engine/: Cargo.toml
bridges/payrolls/sp_integrator/: Cargo.toml
bridges/storage_and_cdn/local_storage/src/: model.rs
bridges/storage_and_cdn/s3_storage/: Cargo.toml
core/aether_core/: Cargo.toml
core/aether_core/src/: lib.rs
core/aether_core/src/config_manager/: model.rs
core/aether_core/src/plugin_manager/models/: mod.rs  plugin_def.rs  plugin_workspace_def.rs  route_def.rs
docs/: get_started.md  prerequisite.md
facets/aether_core/: Cargo.toml
facets/aether_core/src/: lib.rs  routes.rs  services.rs
facets/aether_core/src/application/: services.rs
facets/aether_core/src/config_manager/: models.rs  services.rs
facets/aether_core/src/kernel/: fs.rs
facets/aether_core/src/plugin_manager/: mod.rs  services.rs
facets/authentication/: Cargo.toml
facets/authentication/src/: routes.rs
facets/authentication/src/api/: login.rs
facets/communication/: Cargo.toml
facets/localization/: Cargo.toml
facets/organization/: Cargo.toml
facets/orm/: Cargo.toml
facets/orm/src/models/: settings.rs  users.rs
facets/orm/src/services/: migrations.rs  mod.rs  users.rs
facets/payroll/: Cargo.toml
facets/plugin_manager/: Cargo.toml
facets/report/: Cargo.toml
facets/security/: Cargo.toml
facets/web/: Cargo.toml
facets/web/src/: routes.rs
migrations/: 001_init.surql  002_users.surql  003_organization.surql
sdks/python/: pyproject.toml
sdks/rust/: Cargo.toml  README.md
