[workspace]
members = [
    "aether",
    # bridges   
    "bridges/documents/docusign",
    "bridges/documents/google_drive", "bridges/documents/local_storage",
    "bridges/documents/mayan_edms",
    "bridges/documents/nextcloud",
    "bridges/documents/s3_storage",
    # facets
    "facets/aether_core", "facets/authentication",
    "facets/event_bus", "facets/organization",
    "facets/orm",
    "facets/web",
]
resolver = "2"
