[workspace]
members = [
    "aether",
    # bridges   
    "bridges/documents/docusign",
    "bridges/documents/google_drive",
    "bridges/documents/local_storage",
    "bridges/documents/mayan_edms",
    "bridges/documents/nextcloud",
    "bridges/documents/s3_storage",
    "bridges/payrolls/pe_integrator",
    "bridges/payrolls/sp_integrator",
    # facets
    "facets/aether_core",
    "facets/authentication",
    "facets/event_bus",
    "facets/organization",
    "facets/orm",
    "facets/payroll",
    "facets/storage",
    "facets/web",
]
resolver = "2"
