[workspace]
members = [
    "aether",
    "bridges/auth_and_identity/auth0",
    "bridges/auth_and_identity/authentik",
    "bridges/auth_and_identity/google_auth",
    "bridges/auth_and_identity/keycloak",
    "bridges/auth_and_identity/ldap",
    "bridges/auth_and_identity/microsoft_extra",
    # bridges   
    "bridges/communications/africas_talking",
    "bridges/communications/bravo",
    "bridges/communications/mailgun",
    "bridges/communications/postmark",
    "bridges/communications/resend",
    "bridges/communications/termii",
    "bridges/communications/twilio",
    "bridges/communications/whatsapp",
    "bridges/document_management/docusign",
    "bridges/document_management/google_drive",
    "bridges/document_management/mayan_edms",
    "bridges/document_management/nextcloud",
    "bridges/maps_and_locations/google_map",
    "bridges/maps_and_locations/open_street_map",
    "bridges/payments/flutterwave",
    "bridges/payments/paystack",
    "bridges/payments/stripe",
    "bridges/payrolls/payroll_engine",
    "bridges/payrolls/swift_payroll",
    "bridges/storage_and_cdn/local_storage",
    "bridges/storage_and_cdn/s3_storage",
    # facets
    "facets/aether_core",
    "facets/authentication",
    "facets/communication",
    "facets/event_bus",
    "facets/localization",
    "facets/organization",
    "facets/orm",
    "facets/payroll",
    "facets/storage",
    "facets/web",
]
resolver = "2"
