[package]
name = "aether"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["tokio", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
aether_core = { path = "../facets/aether_core" }
clap = { version = "4.6.1", features = ["env", "derive", "string"] }
log = "0.4"
env_logger = "0.10"
