[package]
name = "aether_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["tokio", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
# facets
aether_authentication = { path = "../authentication" }
aether_organization = { path = "../organization" }
aether_web = { path = "../web" }
aether_event_bus = { path = "../event_bus" }
log = "0.4.32"
